kubernetes_old/cratedb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cratedb
  namespace: tfg-iot
spec:
  serviceName: "cratedb"
  replicas: 1
  selector:
    matchLabels:
      app: cratedb
  template:
    metadata:
      labels:
        app: cratedb
    spec:
      containers:
      - name: cratedb
        image: crate:latest
        ports:
        - containerPort: 4200
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cratedb
  namespace: tfg-iot
spec:
  selector:
    app: cratedb
  ports:
  - name: http
    port: 4200
    targetPort: 4200
