kubernetes_old/flask-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: tfg-iot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: registry.local:5000/flask-api:1.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: tfg-iot
spec:
  selector:
    app: flask-api
  ports:
  - port: 5000
    targetPort: 5000
