kubernetes_old/ingress-cratedb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cratedb
  namespace: tfg-iot
spec:
  ingressClassName: nginx
  rules:
  - host: crate.tfg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cratedb
            port:
              number: 4200
